RESOLVED FIXED54572
REGRESSION (WebKit2): Print Backgrounds checkbox has no effect for DOM initiated printing
https://bugs.webkit.org/show_bug.cgi?id=54572
Summary REGRESSION (WebKit2): Print Backgrounds checkbox has no effect for DOM initia...
Alexey Proskuryakov
Reported 2011-02-16 11:08:18 PST
Preference changes are not propagated during sync calls.
Attachments
proposed fix (1.73 KB, patch)
2011-02-16 11:11 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2011-02-16 11:11:25 PST
Created attachment 82664 [details] proposed fix
Alexey Proskuryakov
Comment 2 2011-02-16 11:14:12 PST
Note You need to log in before you can comment on or make changes to this bug.