        Reviewed by Anders Carlsson.

https://bugs.webkit.org/show_bug.cgi?id=54572
        REGRESSION (WebKit2): Print Backgrounds checkbox has no effect for DOM initiated printing

        * UIProcess/WebPageProxy.cpp: (WebKit::WebPageProxy::preferencesDidChange): Preferences need
        to be propagated to Web process during synchronous printing.



Canonical link: https://commits.webkit.org/68705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78726 268f45cc-cd09-0410-ab3c-d52691b4dbfc